--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,7 +1,8 @@
 <h2>Design &amp; Development</h2>
 
-<div class="flex">
-  <div style="flex-grow:1;" class="p1">
+<div class="clearfix">
+
+  <div class="p1 col col-4">
     <div class="thumbnail">
       <div class="fake-browser-ui">
           <div class="frame">
@@ -10,16 +11,17 @@
               <span></span>
           </div>
 
-          <a href=""><img src="/2017/img/aes.png" width="400" height="267" alt="..."></a>
+          <a href="http://americanethnologist.org"><img src="/2017/img/aes.png" width="400" height="267" alt="..."></a>
       </div>
 
       <div class="caption">
-        <h3><a href="">American Ethnological Society</a></h3>
+        <h3><a href="http://americanethnologist.org">American Ethnological Society</a></h3>
         <p>A modern site for the oldest anthropological organization in the United States, which brings together their quarterly journal, juried competitions, conferences, and online content.</p>
       </div>
     </div>
   </div>
-  <div style="flex-grow:1;" class="p1">
+
+  <div class="p1 col col-4">
     <div class="thumbnail">
       <div class="fake-browser-ui">
           <div class="frame">
@@ -28,18 +30,18 @@
               <span></span>
           </div>
 
-      <a href=""><img src="/2017/img/aplusa.png" width="400" height="267" alt="..."></a>
+      <a href="http://aplusa.org"><img src="/2017/img/aplusa.png" width="400" height="267" alt="..."></a>
     </div>
       <div class="caption">
-        <h3><a href="">Adaptation + Ability Group</a></h3>
+        <h3><a href="http://aplusa.org">Adaptation + Ability Group</a></h3>
         <p>Experimenting with the functionality and aesthetics of web accessibility in this open-source website for an academic research lab.</p>
       </div>
     </div>
   </div>
 
-  <div style="flex-grow:1;" class="p1">
+  <div class="p1 col col-4">
     <div class="thumbnail">
-      <div style="flex-grow:1;" class="p1">
+      <div class="p1">
         <div class="thumbnail">
           <div class="fake-browser-ui">
               <div class="frame">
@@ -53,7 +55,7 @@
 
           <div class="caption">
             <h3><a href="http://engineeringathome.org">Engineering at Home</a></h3>
-            <p>A 6-month long collaboration with anthropologist Caitrin Lynch and designer Sara Hendren, of Olin College, to produce an interactive archive that frames their academic research for a broad internet readership.</p>
+            <p>A 6-month long collaboration with anthropologist Caitrin Lynch and designer Sara Hendren, of Olin College, to produce an interactive archive framing their academic research for a broad internet readership. The project went on to be featured in an exhibition on the future of design at the Victoria & Albert Museum in London.</p>
           </div>
         </div>
       </div>
@@ -63,8 +65,8 @@
 
 <hr>
 
-<div class="flex">
-  <div style="flex-grow:1;" class="p1">
+<div class="clearfix">
+  <div class="p1 col col-6">
     <h2>2-Day Sprint</h2>
     <div class="thumbnail">
       <a href="http://accessibleicon.org"><img src="/2017/img/accessibleicon.png" width="400" height="267" alt="..."></a>
@@ -75,8 +77,8 @@
     </div>
   </div>
 
-  <div class="flex">
-    <div style="flex-grow:1;" class="p1">
+  <div class="clearfix">
+    <div class="p1 col col-6">
       <h2>Pair Programming</h2>
       <div class="thumbnail">
         <a href="http://multientry.com"><img src="/2017/img/multientry.png" width="400" height="267" alt="..."></a>
@@ -93,8 +95,8 @@
 
 <h2>Selected Projects</h2>
 
-<div class="flex">
-  <div style="flex-grow:1;" class="p1">
+<div class="clearfix">
+  <div class="p1 col col-4">
     <div class="thumbnail">
       <a href=""><img src="/2017/img/sarahendren.png" width="400" height="267" alt="..."></a>
       <div class="caption">
@@ -103,7 +105,7 @@
       </div>
     </div>
   </div>
-  <div style="flex-grow:1;" class="p1">
+  <div class="p1 col col-4">
     <div class="thumbnail">
       <a href=""><img src="/2017/img/inglettgallery.png" width="400" height="267" alt="..."></a>
       <div class="caption">
@@ -112,7 +114,7 @@
       </div>
     </div>
   </div>
-  <div style="flex-grow:1;" class="p1">
+  <div class="p1 col col-4">
     <div class="thumbnail">
       <a href=""><img src="/2017/img/brianfunck.png" width="400" height="267" alt="..."></a>
       <div class="caption">
@@ -122,8 +124,8 @@
     </div>
   </div>
 </div>
-<div class="flex">
-  <div style="flex-grow:1;" class="p1">
+<div class="clearfix">
+  <div class="p1 col col-4">
     <div class="thumbnail">
     <a href="http://sfpc.io"><img src="/2017/img/sfpc.png" width="400" height="267" alt="..."></a>
       <div class="caption">
@@ -132,7 +134,7 @@
       </div>
     </div>
   </div>
-  <div style="flex-grow:1;" class="p1">
+  <div class="p1 col col-4">
     <div class="thumbnail">
       <a href="http://marshelal.com"><img src="/2017/img/marshelal.png" width="400" height="267" alt="..."></a>
       <div class="caption">
@@ -141,7 +143,7 @@
       </div>
     </div>
   </div>
-  <div style="flex-grow:1;" class="p1">
+  <div class="p1 col col-4">
     <div class="thumbnail">
       <a href="http://www.tomhealy.us"><img src="/2017/img/tomhealy.png" width="400" height="267" alt="..."></a>
       <div class="caption">
