--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,27 @@
-<div class="bg-gray p3 center" style="height:50vh;">
+<div class="bg-lightgray olive p3 center" style="height:50vh;">
 
-Casey Gollan &bull; casey@bullshit.systems &bull; @caseyg
+<p><span class="flower">🌸</span> Thank you for reading! <span class="flower">🌼</span></p>
+
+Casey Gollan &bull; <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a> &bull; <a href="http://twitter.com/caseyg">@caseyg</a>
+
+<figure class="p0 m0" style="width:250px; margin:auto; margin-top:75px;">
+  <a href="#sisu" rel="modal:open"><img src="http://bullshit.systems/sisu.gif" alt="Monument to Finnish Sisu"></a>
+</figure>
+
+<div id="sisu" class="modal" markdown="1">
+  <p>This is the "Monument to Finnish Sisu."</p>
+
+  <p>What is so compelling about this pile of rocks that would inspire me to look at this picture so many times on any given day?</p>
+
+  <p>Sisu is a word from the Finnish language that is “ekphrastically untranslatable<sup>*</sup>.”</p>
+
+  <p>It stands for a combination of resilience, determination, making a plan and sticking to it, and continuing on against the odds. Like "grit" or equanimity but — I love this part — with a “grimmer quality of stress management”.</p>
+
+  <hr>
+
+  <small><sup>*</sup> This means — I had to look this up — that there isn’t a word quite like sisu in the English language. (others: l’espirit d’escalier, o’jeitinho. I think there are many.)</small>
+
+  <p class="center"><a href="#" class="close" rel="modal:close">Close</a></p>
+</div>
 
 </div>
