--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,14 @@
-<div class="flex sans pt2 pb2" id="nav" style="line-height:1.5; align-items: flex-center;">
-  <section class="mr-auto">
+<div class="clearfix sans pt2 pb2" id="nav" style="line-height:1.5;">
+  <section class="col col-12 sm-col-4 mr-auto">
     <a href="/">Hire Casey</a><br>
     <a href="/about">About Me</a>
   </section>
-  <section class="ml-auto mr-auto center">
+  <section class="col col-12 sm-col-4 ml-auto mr-auto center">
     <a href="/projects-and-clients">Projects and Clients</a><br>
     <a href="/working-together">Working Together</a><br>
   </section>
-  <section class="ml-auto">
+  <section class="col col-12 sm-col-4 ml-auto right-align">
     <a href="/opinions">Opinion Pages</a><br>
-    <a href="/resources">Resources</a><br>
+    <a href="/resources">Resources and Library</a><br>
   </section>
 </div>
