--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <div class="bg-lightgray olive p3 center" style="height:50vh;">
 
-<p><span class="flower">🌸</span> Thank you for reading! <span class="flower">🌼</span></p>
+<p>Ready to work together? Get in touch:<br>
+<a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a></p>
 
-Casey Gollan &bull; <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a> &bull; <a href="http://twitter.com/caseyg">@caseyg</a>
+<p>Casey Gollan &bull; <a href="http://twitter.com/caseyg">@caseyg</a></p>
 
 <figure class="p0 m0" style="width:250px; margin:auto; margin-top:75px;">
   <a href="#sisu" rel="modal:open"><img src="http://bullshit.systems/sisu.gif" alt="Monument to Finnish Sisu"></a>
@@ -23,5 +24,7 @@ Casey Gollan &bull; <a href="mailto:casey@bullshit.systems">casey@bullshit.syste
 
   <p class="center"><a href="#" class="close" rel="modal:close">Close</a></p>
 </div>
+
+<p><span class="flower">🌸</span> Thank you for reading! <span class="flower">🌼</span></p>
 
 </div>
