--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -179,12 +179,10 @@
     </div>
     <div class="bg-lightgray olive p3 center" style="height:50vh;">
 
-    <p>Ready to work together? Get in touch:<br>
+    <p>Got a project in mind? Get in touch:<br>
     <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a></p>
 
-    <p>Casey Gollan &bull; <a href="http://twitter.com/caseyg">@caseyg</a></p>
-
-    <figure class="p0 m0" style="width:250px; margin:auto; margin-top:75px;">
+    <figure class="p0 m0" style="width:250px; margin:75px auto;">
       <a href="#sisu" rel="modal:open"><img src="http://bullshit.systems/sisu.gif" alt="Monument to Finnish Sisu"></a>
     </figure>
 
@@ -206,6 +204,7 @@
 
     <p><span class="flower">🌸</span> Thank you for reading! <span class="flower">🌼</span></p>
 
+    <p>Casey Gollan &bull; <a href="http://twitter.com/caseyg">@caseyg</a></p>
     </div>
 </body>
 
