--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -187,13 +187,11 @@
     </figure>
 
     <div id="sisu" class="modal" markdown="1">
-      <p>This is the "Monument to Finnish Sisu."</p>
-
-      <p>What is so compelling about this pile of rocks that would inspire me to look at this picture so many times on any given day?</p>
+      <p>What is so compelling about this pile of rocks that would inspire me to look at this picture so many times on any given day? (This is the "Monument to Finnish <a href="https://en.wikipedia.org/wiki/Sisu">Sisu</a>.")</p>
 
       <p>Sisu is a word from the Finnish language that is “ekphrastically untranslatable<sup>*</sup>.”</p>
 
-      <p>It stands for a combination of resilience, determination, making a plan and sticking to it, and continuing on against the odds. Like "grit" or equanimity but — I love this part — with a “grimmer quality of stress management”.</p>
+      <p>It stands for a combination of resilience, determination, making a plan and sticking to it, and continuing on against the odds. Like "grit" or equanimity but — I love this part — with a “grimmer quality of stress management.”</p>
 
       <hr>
 
