--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -162,11 +162,11 @@
           </section>
           <section class="col col-12 sm-col-4 ml-auto mr-auto center">
             <a href="/projects-and-clients">Projects and Clients</a><br>
-            <a href="/working-together">Working Together</a><br>
+            <a href="/working-together">Working Together</a>
           </section>
           <section class="col col-12 sm-col-4 ml-auto right-align">
-            <a href="/opinions">Opinion Pages</a><br>
-            <a href="/resources">Resources and Library</a><br>
+            <!--<a href="/opinions">Opinion Pages</a><br>-->
+            <a href="/resources">Resources and Library</a>
           </section>
         </div>
 
