add contact to nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -153,6 +153,7 @@
 </head>
 
 <body>
+
     <div class="container max-width-4 px2" style="margin:auto;">
 
         <div class="clearfix sans pt2 pb2" id="nav" style="line-height:1.5;">
@@ -166,7 +167,8 @@
           </section>
           <section class="col col-12 sm-col-4 ml-auto right-align">
             <!--<a href="/opinions">Opinion Pages</a><br>-->
-            <a href="/resources">Resources and Library</a>
+            <a href="/resources">Resources and Library</a><br>
+            <a href="mailto:casey@bullshit.systems">Contact ✉️</a> <a href="http://twitter.com/caseyg">🐦</a> <a href="http://github.com/caseyg">🐙</a>
           </section>
         </div>
 
@@ -201,8 +203,6 @@
     </div>
 
     <p><span class="flower">🌸</span> Thank you for reading! <span class="flower">🌼</span></p>
-
-    <p>Casey Gollan &bull; <a href="http://twitter.com/caseyg">@caseyg</a></p>
     </div>
 </body>
 
