--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,18 +157,14 @@
     <div class="container max-width-4 px2" style="margin:auto;">
 
         <div class="clearfix sans pt2 pb2" id="nav" style="line-height:1.5;">
-          <section class="col col-12 sm-col-4 mr-auto">
+          <section class="col col-4 mr-auto">
             <a href="/">Hire Casey</a><br>
-            <a href="/about">About Me</a>
           </section>
-          <section class="col col-12 sm-col-4 ml-auto mr-auto center">
-            <a href="/projects-and-clients">Projects and Clients</a><br>
+          <section class="col col-4 ml-auto mr-auto center">
+            <a href="/projects-and-clients">Projects + Clients</a><br>
+          </section>
+          <section class="col col-4 ml-auto right-align">
             <a href="/working-together">Working Together</a>
-          </section>
-          <section class="col col-12 sm-col-4 ml-auto right-align">
-            <!--<a href="/opinions">Opinion Pages</a><br>-->
-            <a href="/resources">Resources and Library</a><br>
-            <a href="mailto:casey@bullshit.systems">Contact ✉️</a> <a href="http://twitter.com/caseyg">🐦</a> <a href="http://github.com/caseyg">🐙</a>
           </section>
         </div>
 
@@ -178,11 +174,22 @@
 
         {{content}}
 
-    </div>
-    <div class="bg-lightgray olive p3 center" style="height:50vh;">
+        <div class="clearfix sans pt2 pb2" id="nav" style="line-height:1.5;">
+          <section class="col col-4 mr-auto">
+            <a href="/about">About Me</a>
+          </section>
+          <section class="col col-4 ml-auto mr-auto center">
+              <a href="mailto:casey@bullshit.systems">Contact ✉️</a> <a href="http://twitter.com/caseyg">🐦</a> <a href="http://github.com/caseyg">🐙</a>
+          </section>
+          <section class="col col-4 ml-auto right-align">
+              <a href="/resources">Resources and Library</a><br>
+              <!--<a href="/opinions">Opinion Pages</a><br>-->
+          </section>
+        </div>
 
-    <p>Got a project in mind? Get in touch:<br>
-    <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a></p>
+    </div>
+
+    <div class="bg-lightgray olive p3 center sans" style="height:50vh;">
 
     <figure class="p0 m0" style="width:250px; margin:75px auto;">
       <a href="#sisu" rel="modal:open"><img src="http://bullshit.systems/sisu.gif" alt="Monument to Finnish Sisu"></a>
@@ -202,8 +209,11 @@
       <p class="center"><a href="#" class="close" rel="modal:close">Close</a></p>
     </div>
 
+    <p>Got a project in mind? Get in touch: <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a></p>
+
     <p><span class="flower">🌸</span> Thank you for reading! <span class="flower">🌼</span></p>
     </div>
+
 </body>
 
 
