--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,13 +157,13 @@
     <div class="container max-width-4 px2" style="margin:auto;">
 
         <div class="clearfix sans pt2 pb2" id="nav" style="line-height:1.5;">
-          <section class="col col-4 mr-auto">
+          <section class="col col-4 p0 m0">
             <a href="/">Hire Casey</a><br>
           </section>
-          <section class="col col-4 ml-auto mr-auto center">
+          <section class="col col-4 p0 m0 center">
             <a href="/projects-and-clients">Projects + Clients</a><br>
           </section>
-          <section class="col col-4 ml-auto right-align">
+          <section class="col col-4 p0 m0 right-align">
             <a href="/working-together">Working Together</a>
           </section>
         </div>
