--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -168,6 +168,8 @@
           </section>
         </div>
 
+        <hr style="border:none;border-top: 1px dashed gray;">
+
         {% if page.hide-title != "please" %}
           <h1>{{ page.title }}</h1>
         {% endif %}
