--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,10 +158,10 @@
 
         <div class="clearfix sans pt2 pb2" id="nav" style="line-height:1.5;">
           <section class="col col-4 p0 m0">
-            <a href="/" {% if page.title == "Hire Casey" %}style="text-decoration:underline;"{% endif %}>Hire Casey</a><br>
+            <a href="/" {% if page.title == "Hire Casey" %}style="text-decoration:underline;"{% endif %}>Hire<br class="sm-hide md-hide lg-hide"> Casey</a><br>
           </section>
           <section class="col col-4 p0 m0 center">
-            <a href="/projects-and-clients" {% if page.title == "Projects" %}style="text-decoration:underline;"{% endif %}>Projects + Clients</a><br>
+            <a href="/projects-and-clients" {% if page.title == "Projects" %}style="text-decoration:underline;"{% endif %}>Projects +&nbsp;Clients</a><br>
           </section>
           <section class="col col-4 p0 m0 right-align">
             <a href="/working-together" {% if page.title == "Working Together" %}style="text-decoration:underline;"{% endif %}>Working Together</a>
@@ -180,7 +180,7 @@
 
     <div class="bg-lightgray olive p3 center sans" style="height:50vh;">
 
-    <p>Got a project in mind? Get in touch: <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a></p>
+    {% if page.title != "Hire Casey" %}<p>Got a project in mind? Get in touch: <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a></p>{% endif %}
 
     <figure class="p0 m0" style="width:250px; margin:75px auto;">
       <a href="#sisu" rel="modal:open"><img src="http://bullshit.systems/sisu.gif" alt="Monument to Finnish Sisu"></a>
