ok, let's do this.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -161,7 +161,7 @@
             <a href="/" {% if page.title == "Hire Casey" %}style="text-decoration:underline;"{% endif %}>Hire<br class="sm-hide md-hide lg-hide"> Casey</a><br>
           </section>
           <section class="col col-4 p0 m0 center">
-            <a href="/projects-and-clients" {% if page.title == "Projects" %}style="text-decoration:underline;"{% endif %}>Projects +&nbsp;Clients</a><br>
+            <a href="/projects-and-clients" {% if page.title == "Projects" %}style="text-decoration:underline;"{% endif %}>Projects and Clients</a><br>
           </section>
           <section class="col col-4 p0 m0 right-align">
             <a href="/working-together" {% if page.title == "Working Together" %}style="text-decoration:underline;"{% endif %}>Working Together</a>
