share card test

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,14 @@
     <meta name="description" content="Let's build a website! Casey Gollan is a designer, developer, and artist based in New York." />
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="author" content="Casey Gollan" />
-    <meta property="og:title" content="Hire Casey Gollan" />
-    <meta property="og:description" content="Let's build a website! Casey Gollan is a designer, developer, and artist based in New York." />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@CaseyG">
+    <meta name="twitter:creator" content="@CaseyG">
+    <meta name="og:title" content="Hire Casey.">
+    <meta name="og:description" content="Hi, I’m Casey—let’s make a website! Starting with strategy, I design and build sites that’re solid, reader-friendly, and easy to maintain.">
+    <meta name="twitter:image" content="http://hire.caseyagollan.com/assets/share.jpg">
+
     <link href="https://unpkg.com/basscss/css/basscss.min.css" rel="stylesheet">
     <link href="https://unpkg.com/basscss-background-colors/css/background-colors.css" rel="stylesheet">
     <link href="https://unpkg.com/basscss-colors/css/colors.css" rel="stylesheet">
