--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <meta name="twitter:site" content="@CaseyG">
     <meta name="twitter:creator" content="@CaseyG">
     <meta name="og:title" content="Hire Casey.">
-    <meta name="og:description" content="Hi, I’m Casey—let’s make a website! Starting with strategy, I design and build sites that’re solid, reader-friendly, and easy to maintain.">
+    <meta name="og:description" content="Let’s make a website! Starting with strategy, I design and build sites that’re solid, reader-friendly, and easy to maintain.">
     <meta name="twitter:image" content="http://hire.caseyagollan.com/assets/share.jpg">
 
     <link href="https://unpkg.com/basscss/css/basscss.min.css" rel="stylesheet">
