--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,7 +188,7 @@
     {% if page.title != "Hire Casey" %}<p>Got a project in mind? Get in touch: <a href="mailto:casey@bullshit.systems">casey@bullshit.systems</a></p>{% endif %}
 
     <figure class="p0 m0" style="width:250px; margin:75px auto;">
-      <a href="#sisu" rel="modal:open"><img src="http://bullshit.systems/sisu.gif" alt="Monument to Finnish Sisu"></a>
+      <a href="#sisu" rel="modal:open"><img src="/assets/sisu.gif" alt="Monument to Finnish Sisu"></a>
     </figure>
 
     <div id="sisu" class="modal" markdown="1">
